# advent_of_code

./: .gitignore  Cargo.toml  README.md
aoc_2015/: Cargo.toml  README.md
aoc_2015/src/: day02.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day12.rs  day14.rs  day15.rs  day16.rs  day19.rs  day25.rs
aoc_2016/: Cargo.toml
aoc_2016/instructions/: day01.md  day03.md  day04.md
aoc_2016/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day07.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
aoc_2016/src/day01/: coordinate.rs  input_parser.rs  lib.rs  main.rs  mod.rs
aoc_2016/src/day08/: main.rs  main.rs.bk
aoc_2017/: Cargo.toml
aoc_2017/instructions/: day02.md
aoc_2017/src/: day03.rs  day04.rs  day05.rs  day18.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs
inputs/: 2016_06.txt
instructions/: 2016.md  2016_01.md  2016_02.md  2016_03.md  2016_04.md
src/: aoc_2016.rs  aoc_2016_bin.rs
src/2016/day01/: coordinate.rs  input_parser.rs  lib.rs  location.rs  sleigh.rs
src/aoc_2016/day01/: input_parser.rs  location.rs  mod.rs  sleigh.rs
src/aoc_2016/day02/: input_parser.rs  keypad.rs  keypad_coordinate.rs  mod.rs
src/aoc_2016/day03/: input_parser.rs  mod.rs  triangle.rs
src/aoc_2016/day04/: char_stats.rs  input_parser.rs  mod.rs  room.rs
src/aoc_2016/day05/: door_hacker.rs  mod.rs
src/aoc_2016/day06/: mod.rs  repetition_coder.rs
src/aoc_2016/day07/: mod.rs
src/aoc_2016/day08/: input_parser.rs  mod.rs  (+1 more)
(+19 files in other folders)
