[package]
name = "Advent of Code"
version = "0.1.0"
authors = ["Thomas Villa <thomvil87@gmail.com>"]

[dependencies]
itertools = "0.7.1"
lazy_static = "0.2"
permutohedron = "0.2.2"
primal = "0.2"
regex = "0.2"
rust-crypto = "^0.2"
time = "0.1"

[[bin]]
name = "aoc_2016"
path = "src/aoc_2016_bin.rs"
